<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/add_movie"
        android:title="@string/add_custom_movie"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/options"
        android:title="@string/options"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/reports"
        android:title="@string/generate_reports"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        app:showAsAction="never"/>

    <item android:id="@+id/reports_history"
        android:title="@string/history_report"
        android:icon="@drawable/ic_baseline_history_24"
        app:showAsAction="never"/>
</menu>