<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/movie_item_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/movie_item_margin">

        <ImageView
            android:id="@+id/movie_item_image"
            android:layout_width="@dimen/movie_item_image_width"
            android:layout_height="@dimen/movie_item_image_height"
            android:padding="@dimen/movie_item_image_padding"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/movie_item_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/movie_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_movie_name" />

            <TextView
                android:id="@+id/movie_item_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_movie_genres"
                android:textSize="@dimen/movie_item_extra_text" />

            <TextView
                android:id="@+id/movie_item_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_movie_year"
                android:textSize="@dimen/movie_item_extra_text" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >


            <TextView
                android:id="@+id/movie_item_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/demo_movie_rating" />

            <TextView
                android:id="@+id/movie_item_personal_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/demo_movie_p_rating" />

        </LinearLayout>

        <Button
            android:id="@+id/movie_item_options"
            android:layout_width="@dimen/options_button_width"
            android:layout_height="wrap_content"
            android:text="@string/dots"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>